# mock-rest-server

./: .gitignore  LICENSE  pyproject.toml
mock_rest_server/: __main__.py  database.py  server.py
src/mock_rest_server/: __main__.py  data_filters.py  database.py  server.py
src/mock_rest_server.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
